# rambler_horoscopes_api_python

./: LICENSE  README.md  pyproject.toml
rambler_horoscopes/: __init__.py
rambler_horoscopes/types/: __init__.py  enum.py
