[tool.poetry]
name = "rambler_horoscopes"
version = "0.1.1"
description = ""
authors = ["ульба <ulbwa@icloud.com>"]
readme = "README.md"
packages = [{include = "rabler_horoscopes"}]

[tool.poetry.dependencies]
python = "^3.10"
httpx-cache = "^0.9.0"
orjson = "^3.8.12"
pydantic = "^1.10.7"
bs4 = "^0.0.1"


[tool.poetry.group.dev.dependencies]
pycodestyle = "^2.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
